code-gen/templates/common/base/cluster-tools/health/remove-from-secondary-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: healthcheck-pingaccess-was
  namespace: health
$patch: delete
