code-gen/templates/common/base/cluster-tools/health/disable-all-healthchecks.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: healthcheck-cluster-health
  namespace: health
$patch: delete

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: healthcheck-pingaccess
  namespace: health
$patch: delete

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: healthcheck-pingdirectory
  namespace: health
$patch: delete

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: healthcheck-pingfederate
  namespace: health
$patch: delete

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: healthcheck-httpbin
  namespace: health
$patch: delete

---

apiVersion: v1
kind: Service
metadata:
  name: healthcheck-httpbin
  namespace: health
$patch: delete

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: healthcheck-httpbin-pa
  namespace: health
$patch: delete

---

apiVersion: v1
kind: Service
metadata:
  name: healthcheck-httpbin-pa
  namespace: health
$patch: delete

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: healthcheck-pingaccess-was
  namespace: health
$patch: delete

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: healthcheck-httpbin-pa-was
  namespace: health
$patch: delete

---

apiVersion: v1
kind: Service
metadata:
  name: healthcheck-httpbin-pa-was
  namespace: health
$patch: delete

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingcloud-healthcheck
  namespace: ping-cloud
$patch: delete

---

apiVersion: v1
kind: Service
metadata:
  name: healthcheck
  namespace: ping-cloud
$patch: delete

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: healthcheck-ingress
  namespace: ping-cloud
$patch: delete

---
